--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 
-<body>
+<body style="padding-top:70px;">
     <header>
         <!-- NavBar -->
         {% include 'partials/_navbar.html' %}
