--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,13 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="{% url 'index' %}">Keegan Leary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Resume</a>
-            <a class="nav-item nav-link" href="#">Blog</a>
+            <li {% if '/projects/' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
+                <a class="nav-link" href="{% url 'projects' %}">Projects</a>
+            </li>
+            <li {% if '/blog/' in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
+                <a class="nav-link" href="{% url 'blog:list' %}">Blog</a>
+            </li>
         </div>
     </div>
 </nav>
