--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %}{{post.title}}{% endblock %}
+
 {% block content %}
 <article class="container">
 
