--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Blog{% endblock %}
+
 {% block content %}
 <div class="container">
     {% for post in  blog_posts %}
