--- a/portfolio/templates/portfolio/detail.html
+++ b/portfolio/templates/portfolio/detail.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}{{project.title}}{% endblock %}
+
 {% block content %}
 <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/carousel/">
 <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
