--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Projects{% endblock %}
+
 {% block content %}
 <div class="album py-5 bg-light">
     <div class="container">
