--- a/templates/base.html
+++ b/templates/base.html
@@ -11,21 +11,17 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
-
-    <!-- Favicons -->
-
-    <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#563d7c">
-
     <!-- Personal Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">
 
+    <!-- Apple Messages Preview -->
     <meta property="og:title" content="Keegan Leary is on the web!" />
     <meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
 
+    <!--font awesome -->
     <script src="https://kit.fontawesome.com/24f39cf89f.js" crossorigin="anonymous"></script>
 
 
