--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
     <!--font awesome -->
     <script src="https://kit.fontawesome.com/24f39cf89f.js" crossorigin="anonymous"></script>
 
+    <!-- custom styles -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 
     <style>
         .bd-placeholder-img {
