--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
     <!--font awesome -->
     <script src="https://kit.fontawesome.com/24f39cf89f.js" crossorigin="anonymous"></script>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Serif&display=swap" rel="stylesheet">
+
     <!-- custom styles -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
