--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -3,6 +3,10 @@
 
 {% block title %}{{post.title}}{% endblock %}
 
+<!-- Apple Messages Preview -->
+<meta property="og:title" content="{{ post.title }} by Keegan Leary" />
+<meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
+
 {% block content %}
 <article class="container">
 
