--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -3,6 +3,10 @@
 
 {% block title %}Blog{% endblock %}
 
+<!-- Apple Messages Preview -->
+<meta property="og:title" content="Keegan Leary's Blog" />
+<meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
+
 {% block content %}
 <div class="container">
     {% for post in  blog_posts %}
