--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -3,6 +3,10 @@
 
 {% block title %}Home{% endblock %}
 
+<!-- Apple Messages Preview -->
+<meta property="og:title" content="Keegan Leary is on the web!" />
+<meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
+
 {% block content %}
 <section class="jumbotron text-center">
     <div class="container">
