--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -3,6 +3,11 @@
 
 {% block title %}Projects{% endblock %}
 
+<!-- Apple Messages Preview -->
+<meta property="og:title" content="Projects" />
+<meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
+
+<!-- generate Project cards -->
 {% block content %}
 <div class="album py-5 bg-light">
     <div class="container">
