--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -11,7 +11,7 @@
 <section class="jumbotron text-center">
     <div class="container">
         <h1>Hi, My name is Keegan</h1>
-        <p class="lead text-muted">I believe we become the best version of ourselves through hard work, adventure, and deep relationships.</p>
+        <p class="lead text-muted">I like to make things and learn stuff.</p>
         <p class="lead text-muted fa-2x">📤&nbsp;&nbsp; 🗺&nbsp;&nbsp; 🏃&nbsp;&nbsp; ‍ 📬</p>
         <div class="d-flex justify-content-center">
             <div class="col-sm-6">
