--- a/portfolio/templates/portfolio/detail.html
+++ b/portfolio/templates/portfolio/detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!-- Apple Messages Preview -->
-<meta property="og:title" content="{{ project.title }} by Keegan Leary" />
+<meta property="og:title" content="{{ project.title }}" />
 <meta property="og:image" content="{{ project.image.url }}" />
 
 
