--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -4,7 +4,7 @@
 {% block title %}{{post.title}}{% endblock %}
 
 <!-- Apple Messages Preview -->
-<meta property="og:title" content="{{ post.title }} by Keegan Leary" />
+<meta property="og:title" content="{{ post.title }}" />
 <meta property="og:image" content="http://keeganleary.com/static/keegan.jpeg" />
 
 {% block content %}
